fix spacing and hide button

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -122,6 +122,7 @@ a:active {
 
 .subtitle h2{
   margin-top: -20px;
+  white-space: pre;
 }
 
 .twitter-form {
